Cleanup code around AnalyzedColumnDefinition
- Remove unused methods args
- Remove unused methods
- Fix & suppress warnings
- Minor code cleanup and beautification